--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<DIV style="text-alignment:center">
-  <h1>PAGE NOT ROUND</h1>  
+<DIV style="text-alignment:center;">
+  <h1>PAGE NOT FOUND</h1>  
+</DIV>
