--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <DIV style="text-align:center">
-  <h1>PAGE NOT FOUND</h1>  
+  <DIV style="font-family:verdana">
+    <h1>PAGE ERROR</h1>
+  </DIV>
 </DIV>
