--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </DIV>
 <style>
 body {
-  background-image: url('example_img_girl.jpg');
+  background-image: url('https://i.etsystatic.com/13818356/r/il/7cf4b8/1904313775/il_570xN.1904313775_c8zp.jpg');
 }
 </style>
