--- a/index.html
+++ b/index.html
@@ -8,3 +8,7 @@ body {
   background-image: url('https://i.etsystatic.com/13818356/r/il/7cf4b8/1904313775/il_570xN.1904313775_c8zp.jpg');
 }
 </style>
+<form>
+  Comment: <input type="text" name="comment" required>
+  <button type="submit">Submit</button>
+</form>
