--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </DIV>
 </DIV>
 <form>
-  Comment: <input type="text" name="comment" required>
+  Comment: <input type="text" name="comment" minlength="10" required>
   <button type="submit">Submit</button>
 </form>
