--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </DIV>
 </DIV>
 <form>
-  Comment: <input type="text" id="dad are you coming back" name="comment" minlength="10" required>
+  Comment: <input type="text" name="comment" minlength="10" required>
   <button type="submit">Submit</button>
+  <h2> 
 </form>
